--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 python_version = "3.7"
 
 [packages]
+aioblescan = "*"
+python-benedict = "*"
+pyyaml = "*"
 
 [dev-packages]
 black = "==19.3b0"
