load and save configuration as yaml fix

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ python_version = "3.7"
 aioblescan = "*"
 python-benedict = "*"
 pyyaml = "*"
+influxdb = "*"
+ruamel-yaml = "*"
 
 [dev-packages]
 black = "==19.3b0"
