--- a/ble_gateway/ble_gateway.config.defaults.yaml
+++ b/ble_gateway/ble_gateway.config.defaults.yaml
@@ -34,7 +34,7 @@ sources:
     fields_order:
     - timestamp
     - mac
-    intervall: 10
+    interval: 10
   defaults:
     decoders:
     - all
@@ -43,7 +43,7 @@ sources:
     fields_order:
     - timestamp
     - mac
-    intervall: 20
+    interval: 20
   e2_e2_4_f_4_d_6_c_77:
     decoders:
     - ruuviraw
@@ -54,7 +54,7 @@ sources:
     fields_order:
     - timestamp
     - mac
-    intervall: 20
+    interval: 20
   unknown:
     decoders:
     - all
@@ -64,4 +64,4 @@ sources:
     fields_order:
     - timestamp
     - mac
-    intervall: 10
+    interval: 10
